--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -15,6 +15,7 @@ dependencies:
   flutter:
     sdk: flutter
   flutter_blue_plus: ^1.35.5
+  flutter_dotenv: ^5.2.1
   flutter_native_splash: ^2.4.6
   flutter_phoenix: ^1.1.1
   geolocator: ^14.0.0
@@ -45,6 +46,7 @@ dev_dependencies:
 flutter:
   uses-material-design: true
   assets:
+    - .env
     - lib/assets/
     - resources/langs/
   fonts:
