--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,7 @@ dependencies:
   screen_brightness: ^2.1.4
   syncfusion_flutter_gauges: ^29.1.38
   system_media_controller: ^0.0.2
+  universal_io: ^2.2.2
   url_launcher: ^6.3.1
   uuid: ^4.5.1
   volume_controller: ^3.4.0
