--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,13 +1,14 @@
 name: escive
 description: "A mobile app aiming to be a third-party client for e-scooters with Bluetooth functionality, allowing an alternative interface with more features."
 publish_to: 'none'
-version: 0.1.0+1
+version: 0.3.0+3
 
 environment:
   sdk: ^3.6.2
 
 dependencies:
   action_slider: 0.8.0-beta.3
+  app_links: ^6.4.0
   battery_plus: ^6.2.1
   crypto: ^3.0.6
   cupertino_onboarding: ^1.3.0
