--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -8,41 +8,41 @@ environment:
 
 dependencies:
   action_slider: 0.8.0-beta.3
-  app_links: ^6.4.0
-  battery_plus: ^6.2.1
-  crypto: ^3.0.6
-  cupertino_onboarding: ^1.3.0
-  easy_localization: ^3.0.7+1
+  app_links: 6.4.0
+  battery_plus: 6.2.1
+  crypto: 3.0.6
+  cupertino_onboarding: 1.3.0
+  easy_localization: 3.0.7+1
   flutter:
     sdk: flutter
-  flutter_blue_plus: ^1.35.5
-  flutter_dotenv: ^5.2.1
-  flutter_fgbg: ^0.7.1
-  flutter_native_splash: ^2.4.6
-  flutter_phoenix: ^1.1.1
-  geocoding: ^4.0.0
-  geolocator: ^14.0.0
-  get_storage: ^2.1.1
-  haptic_feedback: ^0.5.1+1
-  http: ^1.4.0
-  installed_apps: ^1.6.0
-  intl: ^0.19.0
-  logarte: ^1.0.0
-  lucide_icons_flutter: ^3.0.3
-  mapbox_maps_flutter: ^2.9.0
-  material_symbols_icons: ^4.2815.0
-  modal_bottom_sheet: ^3.0.0
-  package_info_plus: ^8.3.0
-  pattern_box: ^0.5.4
-  permission_handler: ^12.0.0+1
-  screen_brightness: ^2.1.4
-  syncfusion_flutter_gauges: ^29.1.38
-  system_media_controller: ^0.0.2
-  universal_io: ^2.2.2
-  url_launcher: ^6.3.1
-  uuid: ^4.5.1
-  volume_controller: ^3.4.0
-  wakelock_plus: ^1.3.2
+  flutter_blue_plus: 1.35.5
+  flutter_dotenv: 5.2.1
+  flutter_fgbg: 0.7.1
+  flutter_native_splash: 2.4.6
+  flutter_phoenix: 1.1.1
+  geocoding: 4.0.0
+  geolocator: 14.0.0
+  get_storage: 2.1.1
+  haptic_feedback: 0.5.1+1
+  http: 1.4.0
+  installed_apps: 1.6.0
+  intl: 0.19.0
+  logarte: 1.0.0
+  lucide_icons_flutter: 3.0.3
+  mapbox_maps_flutter: 2.9.0
+  material_symbols_icons: 4.2815.0
+  modal_bottom_sheet: 3.0.0
+  package_info_plus: 8.3.0
+  pattern_box: 0.5.4
+  permission_handler: 12.0.0+1
+  screen_brightness: 2.1.4
+  syncfusion_flutter_gauges: 29.1.38
+  system_media_controller: 0.0.2
+  universal_io: 2.2.2
+  url_launcher: 6.3.1
+  uuid: 4.5.1
+  volume_controller: 3.4.0
+  wakelock_plus: 1.3.2
 
 dev_dependencies:
   flutter_test:
