--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -32,6 +32,7 @@ dependencies:
   mapbox_maps_flutter: 2.9.0
   material_symbols_icons: 4.2815.0
   modal_bottom_sheet: 3.0.0
+  native_device_orientation: ^2.0.3
   package_info_plus: 8.3.0
   pattern_box: 0.5.4
   permission_handler: 12.0.0+1
