--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,9 +34,11 @@ dependencies:
   modal_bottom_sheet: 3.0.0
   native_device_orientation: ^2.0.3
   package_info_plus: 8.3.0
+  path_provider: ^2.1.5
   pattern_box: 0.5.4
   permission_handler: 12.0.0+1
   screen_brightness: 2.1.4
+  share_plus: ^11.0.0
   syncfusion_flutter_gauges: 29.1.38
   system_media_controller: 0.0.2
   universal_io: 2.2.2
